--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
     </build>
     <repositories>
         <repository>
+            <id>jboss</id>
+            <url>http://repository.jboss.org/maven2</url>
+        </repository>
+        <repository>
             <id>central</id>
             <name>Central Repository</name>
             <url>http://repo1.maven.org/maven2</url>
