--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ YES Technology - http://yestech.org
-  ~
-  ~ Licensed using GPL Available - http://opensource.org/licenses/gpl-license.php
-  ~
-  ~ File name:           $RCSfile: $
-  ~ Revision:            $Revision: $
-  ~ Last revised by:     $Author: $
-  ~ Last revision date:  $Date: $
-  ~
-  ~ Original Author:     Arthur Copeland
-  ~
-  -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -20,11 +6,12 @@
     <artifactId>yeswizard</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>YES Tech Wizard</name>
-    <url>http://yestech.org</url>
+    <url>http://yestech.org/sites/yeswizard/</url>
     <packaging>jar</packaging>
     <scm>
-        <connection>scm:git:http://github.com/yestech/yeswizard/tree/master</connection>
-        <developerConnection>scm:git:http://github.com/yestech/yeswizard/tree/master</developerConnection>
+        <connection>scm:git:git://github.com/yestech/yeswizard.git</connection>
+        <developerConnection>scm:git:git://github.com/yestech/yeswizard.git</developerConnection>
+        <url>http://github.com/yestech/yeswizard/tree/master</url>
     </scm>
     <organization>
         <name>YES Technology Association</name>
@@ -41,7 +28,7 @@
         <developer>
             <id>artie</id>
             <name>Artie Copeland</name>
-            <email>artie@yestech.org</email>
+            <email>http://mailhide.recaptcha.net/d?k=013dif-8KmF_OR5-Zs49rn9w==&amp;c=ZDwNN9ZwWomHpMAaLEW0Rt3HB4aATO6AM20eeZNxLS4=</email>
             <roles>
                 <role>architect</role>
                 <role>developer</role>
@@ -131,6 +118,25 @@
             </build>
         </profile>
     </profiles>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.4.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.1.2</version>
+            </plugin>
+        </plugins>
+    </reporting>
     <repositories>
         <repository>
             <id>yestech-snapshots</id>
@@ -158,6 +164,10 @@
         </pluginRepository>
     </pluginRepositories>
     <distributionManagement>
+        <site>
+            <id>yestech.org</id>
+            <url>file:////wwwhome/yestech.org/sites/${artifactId}</url>
+        </site>
         <repository>
             <id>yestech-releases</id>
             <name>YES Technology Release Repository</name>
