--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,15 @@
     <name>YES Tech Wizard</name>
     <url>http://yestech.org/sites/yeswizard/</url>
     <packaging>jar</packaging>
-    <description></description>
+    <description>A framework the allows for wizard flow control</description>
     <parent>
         <groupId>org.yestech</groupId>
         <artifactId>yessuperpom</artifactId>
-        <version>1.1.0</version>
+        <version>1.3.0</version>
     </parent>
     <scm>
-        <connection>scm:git:git://github.com/yestech/yeswizard.git</connection>
-        <developerConnection>scm:git:git://github.com/yestech/yeswizard.git</developerConnection>
+        <connection>scm:git:git@github.com:yestech/yeswizard.git</connection>
+        <developerConnection>scm:git:git@github.com:yestech/yeswizard.git</developerConnection>
         <url>http://github.com/yestech/yeswizard/tree/master</url>
     </scm>
     <organization>
@@ -41,6 +41,10 @@
             </roles>
         </developer>
     </developers>
+    <ciManagement>
+        <url>http://ci.yestech.org</url>
+        <system>hudson</system>
+    </ciManagement>
     <dependencies>
         <dependency>
             <groupId>commons-lang</groupId>
