--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.yestech</groupId>
     <artifactId>yeswizard</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>YES Tech Wizard</name>
     <url>http://yestech.org/sites/yeswizard/</url>
     <packaging>jar</packaging>
